# radfoam

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.py  prepare_colmap_data.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  train.py  viewer.py
configs/: __init__.py  blender.yaml  db.yaml  mipnerf360_indoor.yaml  mipnerf360_outdoor.yaml
data_loader/: __init__.py  blender.py  colmap.py  ray_utils.py
radfoam_model/: render.py  scene.py  utils.py
scripts/: cmake_clean.sh  torch_info.py
src/: CMakeLists.txt
src/aabb_tree/: aabb_tree.cu  aabb_tree.cuh  aabb_tree.h
src/delaunay/: delaunay.cu  delaunay.cuh  delaunay.h  delete_violations.cu  exact_tree_ops.cuh  growth_iteration.cu  predicate.cuh  sample_initial_tets.cu  shewchuk.cuh  sorted_map.cuh  triangulation_ops.cu  triangulation_ops.h
src/tracing/: camera.h  pipeline.cu  pipeline.h  sh_utils.cuh  tracing_utils.cuh
src/utils/: batch_fetcher.cpp  batch_fetcher.h  common_kernels.cuh  cuda_array.h  cuda_helpers.h  geometry.h  random.h  typing.h  unenumerate_iterator.cuh
src/viewer/: viewer.cpp  viewer.h
torch_bindings/: CMakeLists.txt  bindings.h  pipeline_bindings.cpp  pipeline_bindings.h  torch_bindings.cpp  triangulation_bindings.cpp  triangulation_bindings.h
torch_bindings/radfoam/: __init__.py.in
